--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "style-loader": "0.21.0",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
+    "url-loader": "1.1.1",
     "webpack": "4.16.5",
     "webpack-cli": "2.1.4",
     "webpack-extraneous-file-cleanup-plugin": "2.0.0"
