--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "file-loader": "1.1.11",
     "happypack": "5.0.0",
     "html-loader": "0.5.5",
+    "jquery": "3.3.1",
     "libphonenumber-js": "1.4.6",
     "lodash": "4.17.10",
     "lodash-webpack-plugin": "0.11.5",
