--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "concat-loader": "0.1.0",
     "cross-env": "5.1.6",
     "css-loader": "0.28.11",
-    "dayjs": "1.7.7",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-config-standard": "11.0.0",
@@ -54,6 +53,7 @@
     "libphonenumber-js": "1.4.6",
     "lodash": "4.17.10",
     "lodash-webpack-plugin": "0.11.5",
+    "moment": "2.22.2",
     "npm-run-all": "4.1.3",
     "pug-html-loader": "1.1.5",
     "recursive-assign": "0.2.0",
