--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "file-loader": "1.1.11",
     "happypack": "5.0.0",
     "html-loader": "0.5.5",
+    "jquery": "3.3.1",
     "libphonenumber-js": "1.4.6",
     "lodash": "4.17.10",
     "lodash-webpack-plugin": "0.11.5",
+    "moment": "2.22.2",
     "npm-run-all": "4.1.3",
     "pug-html-loader": "1.1.5",
     "recursive-assign": "0.2.0",
@@ -59,6 +61,7 @@
     "style-loader": "0.21.0",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
+    "url-loader": "1.1.1",
     "webpack": "4.16.5",
     "webpack-cli": "2.1.4",
     "webpack-extraneous-file-cleanup-plugin": "2.0.0"
