--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,7 @@
 {
-  "name": "redtail embeddable ringcentral phone",
-  "description": "RingCentral Embeddable Voice with chrome extension for redtail",
-<<<<<<< HEAD:src/manifest.json
+  "name": "RedtailCRM embeddable ringcentral phone",
+  "description": "RingCentral Embeddable Voice with chrome extension for RedtailCRM",
   "version": "0.1.0",
-=======
-  "version": "0.0.6",
->>>>>>> 2cf42fa4c8af238fcb85f36e3a8831c977bb3b4a:dist/manifest.json
   "permissions": [
     "http://*/",
     "https://*/",
