--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redtail-embeddable-ringcentral-phone",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "RingCentral Embeddable Voice with chrome extension for redtail",
   "main": "index.js",
   "scripts": {
@@ -16,52 +16,50 @@
   ],
   "author": "",
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "8.2.3",
-    "babel-loader": "7.1.4",
-    "babel-plugin-import": "1.7.0",
+    "@babel/cli": "7.1.2",
+    "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-decorators": "7.1.2",
+    "@babel/plugin-proposal-json-strings": "7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.1.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/register": "7.0.0",
+    "@babel/runtime": "7.1.2",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.4",
+    "babel-plugin-import": "1.10.0",
     "babel-plugin-lodash": "3.3.4",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-register": "6.26.0",
-    "babel-runtime": "6.26.0",
-    "babili-webpack-plugin": "0.1.2",
     "concat-loader": "0.1.0",
     "cross-env": "5.1.6",
     "css-loader": "0.28.11",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-config-standard": "11.0.0",
+    "dayjs": "1.7.7",
+    "eslint": "5.7.0",
+    "eslint-config-standard": "12.0.0",
     "eslint-formatter-pretty": "1.3.0",
-    "eslint-import-resolver-webpack": "0.10.0",
-    "eslint-plugin-compat": "2.2.0",
-    "eslint-plugin-import": "2.12.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-node": "6.0.1",
-    "eslint-plugin-promise": "3.8.0",
-    "eslint-plugin-react": "7.8.2",
-    "eslint-plugin-standard": "3.1.0",
+    "eslint-import-resolver-webpack": "0.10.1",
+    "eslint-plugin-compat": "2.6.2",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-node": "7.0.1",
+    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-standard": "4.0.0",
     "extract-loader": "2.0.1",
     "file-loader": "1.1.11",
     "happypack": "5.0.0",
     "html-loader": "0.5.5",
     "jquery": "3.3.1",
-    "libphonenumber-js": "1.4.6",
-    "lodash": "4.17.10",
     "lodash-webpack-plugin": "0.11.5",
-    "moment": "2.22.2",
+    "moment": "2.23.0",
     "npm-run-all": "4.1.3",
     "pug-html-loader": "1.1.5",
     "recursive-assign": "0.2.0",
+    "ringcentral-embeddable-extension-common": "0.1.8",
     "shelljs": "0.8.2",
     "style-loader": "0.21.0",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
-    "url-loader": "1.1.1",
+    "url-loader": "1.1.2",
     "webpack": "4.16.5",
     "webpack-cli": "2.1.4",
     "webpack-extraneous-file-cleanup-plugin": "2.0.0"
