--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "redtail embeddable ringcentral phone",
-  "description": "RingCentral Embeddable Voice with chrome extension for redtail",
-  "version": "0.0.6",
+  "name": "RedtailCRM embeddable ringcentral phone",
+  "description": "RingCentral Embeddable Voice with chrome extension for RedtailCRM",
+  "version": "0.1.0",
   "permissions": [
     "http://*/",
     "https://*/",
@@ -46,6 +46,6 @@
     ],
     "persistent": true
   },
-  "content_security_policy": "script-src 'self' https://apps.ringcentral.com/integration/ringcentral-embeddable/0.1.0/index.html; object-src 'self'",
+  "content_security_policy": "script-src 'self' https://ringcentral.github.io/ringcentral-embeddable/index.html; object-src 'self'",
   "manifest_version": 2
 }
