--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@
 .idea/
 /temp/
 .vscode/
-/dist/content.js*
-/dist/background.js*
 /dist/*.json
 /dist/*.html
+/dist/*.js
+/dist/*.map
 /dist/images/
 package-lock.json
 /config.js
