--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "RedtailCRM embeddable ringcentral phone",
-  "description": "RingCentral Embeddable Voice with chrome extension for RedtailCRM",
-  "version": "0.2.0",
+  "description": "RingCentral Embeddable Voice with Chrome extension for RedtailCRM",
+  "version": "0.2.1",
   "permissions": [
     "http://*/",
     "https://*/",
