--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "redtail-embeddable-ringcentral-phone",
-  "version": "0.0.1",
-  "description": "RingCentral Embeddable Voice with chrome extension for redtail",
+  "version": "1.0.0",
+  "description": "RingCentral Embeddable Voice with Chrome extension for RedtailCRM",
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -w",
     "start": "npm run build",
     "postinstall": "node bin/post-install",
-    "lint": "./node_modules/.bin/eslint --max-warnings 0 --ext .js  src"
+    "lint": "./node_modules/.bin/standard"
   },
   "keywords": [
     "RingCentral",
@@ -16,52 +16,49 @@
   ],
   "author": "",
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "8.2.3",
-    "babel-loader": "7.1.4",
-    "babel-plugin-import": "1.7.0",
+    "@babel/cli": "7.4.3",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-decorators": "7.4.0",
+    "@babel/plugin-proposal-json-strings": "7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.4.3",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "7.4.0",
+    "@babel/runtime": "7.4.3",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.5",
+    "babel-plugin-import": "1.10.0",
     "babel-plugin-lodash": "3.3.4",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-register": "6.26.0",
-    "babel-runtime": "6.26.0",
-    "babili-webpack-plugin": "0.1.2",
     "concat-loader": "0.1.0",
+    "copy-webpack-plugin": "4.6.0",
     "cross-env": "5.1.6",
-    "css-loader": "0.28.11",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-config-standard": "11.0.0",
-    "eslint-formatter-pretty": "1.3.0",
-    "eslint-import-resolver-webpack": "0.10.0",
-    "eslint-plugin-compat": "2.2.0",
-    "eslint-plugin-import": "2.12.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-node": "6.0.1",
-    "eslint-plugin-promise": "3.8.0",
-    "eslint-plugin-react": "7.8.2",
-    "eslint-plugin-standard": "3.1.0",
+    "css-loader": "^2.1.1",
+    "dayjs": "1.7.7",
     "extract-loader": "2.0.1",
     "file-loader": "1.1.11",
     "happypack": "5.0.0",
     "html-loader": "0.5.5",
-    "libphonenumber-js": "1.4.6",
-    "lodash": "4.17.10",
+    "jquery": "^3.4.1",
     "lodash-webpack-plugin": "0.11.5",
+    "moment": "2.23.0",
     "npm-run-all": "4.1.3",
     "pug-html-loader": "1.1.5",
     "recursive-assign": "0.2.0",
+    "ringcentral-embeddable-extension-common": "0.5.12",
     "shelljs": "0.8.2",
-    "style-loader": "0.21.0",
+    "standard": "^12.0.1",
+    "style-loader": "0.23.1",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
-    "webpack": "4.16.5",
-    "webpack-cli": "2.1.4",
+    "url-loader": "1.1.2",
+    "webpack": "4.32.2",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-server": "3.3.1",
     "webpack-extraneous-file-cleanup-plugin": "2.0.0"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   },
   "dependencies": {}
 }
