--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "redtail-embeddable-ringcentral-phone",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "RingCentral Embeddable Voice with Chrome extension for RedtailCRM",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -w",
+    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -w",
     "start": "npm run build",
     "postinstall": "node bin/post-install",
-    "lint": "./node_modules/.bin/standard"
+    "lint": "standard"
   },
   "keywords": [
     "RingCentral",
     "embeddable",
     "phone"
   ],
-  "author": "",
+  "author": "Drake Zhao <drake.zhao@ringcentral.com>",
   "devDependencies": {
     "@babel/cli": "7.4.3",
     "@babel/core": "^7.4.5",
@@ -31,7 +31,7 @@
     "babel-plugin-import": "1.10.0",
     "babel-plugin-lodash": "3.3.4",
     "concat-loader": "0.1.0",
-    "copy-webpack-plugin": "4.6.0",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "5.1.6",
     "css-loader": "^2.1.1",
     "dayjs": "1.7.7",
@@ -45,7 +45,7 @@
     "npm-run-all": "4.1.3",
     "pug-html-loader": "1.1.5",
     "recursive-assign": "0.2.0",
-    "ringcentral-embeddable-extension-common": "0.7.0",
+    "ringcentral-embeddable-extension-common": "0.7.6",
     "shelljs": "0.8.2",
     "standard": "^12.0.1",
     "style-loader": "0.23.1",
@@ -60,5 +60,20 @@
   "standard": {
     "parser": "babel-eslint"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "bin": {
+    "redtail-embeddable-ringcentral-phone": "post-install.js"
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ringcentral/redtail-embeddable-ringcentral-phone.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ringcentral/redtail-embeddable-ringcentral-phone/issues"
+  },
+  "homepage": "https://github.com/ringcentral/redtail-embeddable-ringcentral-phone#readme"
 }
