--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "RedtailCRM embeddable ringcentral phone",
   "description": "RingCentral Embeddable Voice with Chrome extension for RedtailCRM",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "permissions": [
     "http://*/",
     "https://*/",
@@ -36,6 +36,7 @@
         "https://smf.accounts.redtailtechnology.com/*"
       ],
       "js": [
+        "./jsstore.worker.min.js",
         "./content.js"
       ]
     }
