--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "redtail-embeddable-ringcentral-phone",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "RingCentral Embeddable Voice with Chrome extension for RedtailCRM",
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -w",
     "start": "npm run build",
     "postinstall": "node bin/post-install",
-    "lint": "standard"
+    "lint": "./node_modules/.bin/standard",
+    "fix": "./node_modules/.bin/standard --fix",
+    "pack": "rm -rf dist && cross-env NODE_ENV=production ./node_modules/.bin/webpack && node bin/pack"
   },
   "keywords": [
     "RingCentral",
@@ -45,7 +47,7 @@
     "npm-run-all": "4.1.3",
     "pug-html-loader": "1.1.5",
     "recursive-assign": "0.2.0",
-    "ringcentral-embeddable-extension-common": "0.7.6",
+    "ringcentral-embeddable-extension-common": "0.7.8",
     "shelljs": "0.8.2",
     "standard": "^12.0.1",
     "style-loader": "0.23.1",
