--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redtail-embeddable-ringcentral-phone",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "RingCentral Embeddable Voice with Chrome extension for RedtailCRM",
   "main": "index.js",
   "scripts": {
@@ -35,7 +35,7 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/register": "7.4.0",
     "@babel/runtime": "7.4.3",
-    "antd": "^4.1.3",
+    "antd": "^4.1.5",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "babel-plugin-import": "1.10.0",
@@ -55,12 +55,14 @@
     "lodash-webpack-plugin": "0.11.5",
     "moment": "2.23.0",
     "npm-run-all": "4.1.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-rename-selector": "^0.1.1",
     "pug-html-loader": "1.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "recursive-assign": "0.2.0",
     "replace-in-file": "^5.0.2",
-    "ringcentral-embeddable-extension-common": "0.8.7",
+    "ringcentral-embeddable-extension-common": "0.9.0",
     "shelljs": "0.8.2",
     "standard": "^12.0.1",
     "style-loader": "0.23.1",
