--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redtail-embeddable-ringcentral-phone",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "description": "RingCentral Embeddable Voice with Chrome extension for RedtailCRM",
   "main": "index.js",
   "scripts": {
@@ -19,12 +19,13 @@
   "keywords": [
     "RingCentral",
     "embeddable",
-    "phone"
+    "phone",
+    "RedtailCRM"
   ],
   "author": "Drake Zhao <drake.zhao@ringcentral.com>",
   "devDependencies": {
     "@ant-design/icons": "^4.0.6",
-    "@babel/cli": "7.4.3",
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-proposal-decorators": "7.4.0",
@@ -41,7 +42,7 @@
     "babel-plugin-import": "1.10.0",
     "babel-plugin-lodash": "3.3.4",
     "concat-loader": "0.1.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^6.0.3",
     "cross-env": "5.1.6",
     "css-loader": "^2.1.1",
     "dayjs": "1.7.7",
@@ -49,7 +50,7 @@
     "file-loader": "1.1.11",
     "happypack": "5.0.0",
     "html-loader": "0.5.5",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "json-deep-copy": "^1.1.1",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
@@ -63,16 +64,16 @@
     "react-dom": "^16.13.1",
     "recursive-assign": "0.2.0",
     "replace-in-file": "^5.0.2",
-    "ringcentral-embeddable-extension-common": "0.9.8",
+    "ringcentral-embeddable-extension-common": "0.11.1",
     "shelljs": "0.8.2",
     "standard": "^12.0.1",
     "style-loader": "0.23.1",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.2",
     "url-loader": "1.1.2",
-    "webpack": "4.32.2",
-    "webpack-cli": "3.3.0",
-    "webpack-dev-server": "3.3.1",
+    "webpack": "4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
     "webpack-extraneous-file-cleanup-plugin": "2.0.0"
   },
   "standard": {
