--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redtail-embeddable-ringcentral-phone",
-  "version": "2.6.2",
+  "version": "2.7.0",
   "description": "RingCentral Embeddable Voice with Chrome extension for RedtailCRM",
   "main": "index.js",
   "scripts": {
@@ -58,6 +58,7 @@
     "npm-run-all": "4.1.3",
     "postcss-loader": "^3.0.0",
     "postcss-rename-selector": "^0.1.1",
+    "pretty-ms": "^7.0.1",
     "pug-html-loader": "1.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
