--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "redtail-embeddable-ringcentral-phone",
-  "version": "3.3.2",
+  "version": "3.4.0",
   "description": "RingCentral Embeddable Voice with Chrome extension for RedtailCRM",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production ./node_modules/.bin/webpack --progress -w",
+    "build": "NODE_ENV=production ./node_modules/.bin/webpack --config build/webpack.config.js --progress -w",
     "start": "npm run build",
     "postinstall": "node bin/post-install",
     "lint": "./node_modules/.bin/standard",
@@ -24,57 +24,63 @@
   ],
   "author": "Drake Zhao <drake.zhao@ringcentral.com>",
   "devDependencies": {
-    "@ant-design/icons": "^4.0.6",
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-proposal-decorators": "7.4.0",
-    "@babel/plugin-proposal-json-strings": "7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.4.3",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/register": "7.4.0",
-    "@babel/runtime": "7.4.3",
-    "antd": "^4.7.2",
-    "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.5",
-    "babel-plugin-import": "1.10.0",
+    "@ant-design/icons": "4.7.0",
+    "@babel/cli": "7.16.0",
+    "@babel/core": "7.16.0",
+    "@babel/plugin-proposal-class-properties": "7.16.0",
+    "@babel/plugin-proposal-decorators": "7.16.4",
+    "@babel/plugin-proposal-json-strings": "7.16.0",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.16.4",
+    "@babel/preset-env": "7.16.4",
+    "@babel/preset-react": "7.16.0",
+    "@babel/register": "7.16.0",
+    "@babel/runtime": "7.16.3",
+    "@electerm/antd-dayjs-webpack-plugin": "1.0.7",
+    "antd": "4.17.2",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.2.3",
+    "babel-plugin-import": "1.13.3",
     "babel-plugin-lodash": "3.3.4",
+    "blueimp-md5": "2.19.0",
     "concat-loader": "0.1.0",
-    "copy-webpack-plugin": "^6.0.3",
-    "css-loader": "^2.1.1",
-    "dayjs": "1.7.7",
-    "extract-loader": "2.0.1",
-    "file-loader": "1.1.11",
-    "happypack": "5.0.0",
-    "html-loader": "0.5.5",
-    "jquery": "^3.5.1",
-    "json-deep-copy": "^1.1.1",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "lodash-webpack-plugin": "0.11.5",
-    "moment": "2.23.0",
-    "npm-run-all": "4.1.3",
-    "postcss-loader": "^3.0.0",
-    "postcss-rename-selector": "^0.1.1",
+    "copy-webpack-plugin": "10.0.0",
+    "cross-env": "7.0.3",
+    "css-loader": "6.5.1",
+    "dayjs": "1.10.7",
+    "dotenv": "10.0.0",
+    "extract-loader": "5.1.0",
+    "fast-deep-equal": "3.1.3",
+    "file-loader": "6.2.0",
+    "html-loader": "3.0.1",
+    "jquery": "^3.6.0",
+    "json-deep-copy": "1.1.6",
+    "less": "4.1.2",
+    "less-loader": "10.2.0",
+    "lodash": "4.17.21",
+    "lodash-webpack-plugin": "0.11.6",
+    "moment": "^2.29.1",
+    "nanoid": "3.1.30",
+    "postcss-loader": "6.2.1",
+    "postcss-rename-selector": "0.1.1",
     "pretty-ms": "^7.0.1",
-    "pug-html-loader": "1.1.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "17.0.2",
+    "react-delta": "1.1.2",
+    "react-dom": "17.0.2",
+    "react-draggable": "4.4.4",
     "recursive-assign": "0.2.0",
-    "replace-in-file": "^5.0.2",
-    "ringcentral-embeddable-extension-common": "0.12.1",
-    "shelljs": "0.8.2",
-    "standard": "^12.0.1",
-    "style-loader": "0.23.1",
-    "stylus": "0.54.5",
-    "stylus-loader": "3.0.2",
-    "url-loader": "1.1.2",
-    "webpack": "4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-extraneous-file-cleanup-plugin": "2.0.0"
+    "replace-in-file": "6.3.2",
+    "ringcentral-embeddable-extension-common": "0.12.3",
+    "shelljs": "0.8.4",
+    "standard": "16.0.4",
+    "style-loader": "3.3.1",
+    "stylus": "0.55.0",
+    "stylus-loader": "6.2.0",
+    "timeout-as-promise": "1.0.0",
+    "url-loader": "4.1.1",
+    "webpack": "5.64.4",
+    "webpack-cli": "4.9.1",
+    "webpack-dev-server": "4.6.0"
   },
   "standard": {
     "parser": "babel-eslint",
