--- a/sample.env
+++ b/sample.env
@@ -3,7 +3,7 @@
 # set to true if minimize content.js
 minimize=false
 
-# rc app credentials
+# rc app credentials, required
 clientID=
 clientSecret=
 # for production is https://platform.ringcentral.com
@@ -14,5 +14,5 @@ serviceName=Pipedrive
 appName=pipedrive-embeddable-ringcentral-phone-spa
 pageSize=10000
 
-# upgrade
-upgradeServer=https://xxxx.xxx
+# upgrade not required
+upgradeServer=
